--- a/FlowerShopAuth/Views/Account/Register.cshtml
+++ b/FlowerShopAuth/Views/Account/Register.cshtml
@@ -113,7 +113,7 @@
         <div class="form-group mb-4">
             <label>Role</label>
             <select name="Role" class="form-control" required>
-                <option value="User">User</option>
+                <option value="User">User...</option>
                 <option value="Admin">Admin</option>
             </select>
         </div>
